--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
       <div class="modal">
         <button class="modal-close-btn">
           <svg class="modal-close-icon" width="8" height="8">
-            <use href="./images/icons.svg#icon-close"></use>
+            <use href="./images/icons-form.svg#icon-close"></use>
           </svg>
         </button>
         <p class="modal-title">Leave your contacts and we will call you back</p>
@@ -481,7 +481,7 @@
                 class="modal-input"
               />
               <svg class="modal-icon" width="18" height="24">
-                <use href="./images/icons.svg#icon-person"></use>
+                <use href="./images/icons-form.svg#icon-person"></use>
               </svg>
             </div>
           </div>
@@ -495,7 +495,7 @@
                 class="modal-input"
               />
               <svg class="modal-icon" width="18" height="24">
-                <use href="./images/icons.svg#icon-phone"></use>
+                <use href="./images/icons-form.svg#icon-phone"></use>
               </svg>
             </div>
           </div>
@@ -509,12 +509,12 @@
                 class="modal-input"
               />
               <svg class="modal-icon" width="18" height="24">
-                <use href="./images/icons.svg#icon-email"></use>
+                <use href="./images/icons-form.svg#icon-email"></use>
               </svg>
             </div>
             <div class="modal-field">
-              <label for="user-comment" class="modal-label">Comment</label
-              ><textarea
+              <label for="user-comment" class="modal-label"> Comment</label>
+              <textarea
                 name="user-comment"
                 id="user-comment"
                 class="modal-textarea"
@@ -530,13 +530,15 @@
               <label for="user-privacy" class="input-check-text">
                 <span class="check-empty">
                   <svg class="check-icon" width="10" height="8">
-                    <use href="./images/icons.svg#icon-vector"></use>
+                    <use href="./images/icons-form.svg#icon-Vector"></use>
                   </svg> </span
-                ><a href="" class="input-check-link"></a
-              ></label>
+                >I accept the terms and conditions of the
+                <a href="" class="input-check-link">Privacy Policy</a>
+              </label>
             </div>
           </div>
         </form>
+        <button class="modal-send-btn" type="submit">Send</button>
       </div>
     </div>
   </body>
