--- a/index.html
+++ b/index.html
@@ -459,90 +459,110 @@
             </li>
           </ul>
         </div>
-        <!--Modal-->
-        <div class="backdrop">
-          <div class="modal">
-            <button class="modal-close-btn">
-              <svg class="modal-close-icon" width="8" height="8">
-                <use href="./images/icons-form.svg#icon-close"></use>
+        <div class="footer-feedback">
+          <p class="footer-text-subscribe">Subscribe</p>
+          <form class="footer-form">
+            <label class="footer-label">
+              <input
+                class="footer-form-input"
+                type="email"
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="footer-form-btn" type="submit">
+              Subscribe
+              <svg class="footer-form-icon" width="24" height="24">
+                <use href="./images/subscribe.svg#icon-Frame-3"></use>
               </svg>
             </button>
-            <p class="modal-title">
-              Leave your contacts and we will call you back
-            </p>
-            <form class="modal-form">
-              <div class="modal-field">
-                <label for="user-name" class="modal-label">Name</label>
-                <div class="modal-input-wrap">
-                  <input
-                    id="user-name"
-                    name="user-name"
-                    type="text"
-                    class="modal-input"
-                  />
-                  <svg class="modal-icon" width="18" height="24">
-                    <use href="./images/icons-form.svg#icon-person"></use>
-                  </svg>
-                </div>
-              </div>
-              <div class="modal-field">
-                <label for="user-tel" class="modal-label">Phone</label>
-                <div class="modal-input-wrap">
-                  <input
-                    id="user-tel"
-                    name="user-tel"
-                    type="tel"
-                    class="modal-input"
-                  />
-                  <svg class="modal-icon" width="18" height="24">
-                    <use href="./images/icons-form.svg#icon-phone"></use>
-                  </svg>
-                </div>
-              </div>
-              <div class="modal-field">
-                <label for="user-email" class="modal-label">Email</label>
-                <div class="modal-input-wrap">
-                  <input
-                    id="user-email"
-                    name="user-email"
-                    type="email"
-                    class="modal-input"
-                  />
-                  <svg class="modal-icon" width="18" height="24">
-                    <use href="./images/icons-form.svg#icon-email"></use>
-                  </svg>
-                </div>
-              </div>
-             <div class="modal-field">
-                <label for="user-comment" class="modal-label"> Comment</label>
-                 <textarea
-                    name="user-comment"
-                    id="user-comment"
-                    class="modal-textarea"
-                    placeholder="Text input"
-                  ></textarea>
-              </div>
-              <div class="checkfield">
-                  <input
-                    id="user-privacy"
-                    type="checkbox"
-                    class="check-input visually-hidden"
-                  />
-                  <label for="user-privacy" class="input-check-text">
-                    <span class="check-empty">
-                      <svg class="check-icon" width="10" height="8">
-                        <use href="./images/icons-form.svg#icon-Vector"></use>
-                      </svg> </span
-                    >I accept the terms and conditions of the
-                    <a href="" class="input-check-link">Privacy Policy</a>
-                  </label>
-                </div>
-              </div>
-            </form>
-            <button class="modal-send-btn" type="submit">Send</button>
-          </div>
+          </form>
         </div>
       </div>
     </footer>
+
+    <!--Modal -->
+            <div class="backdrop">
+              <div class="modal">
+                <button class="modal-close-btn">
+                  <svg class="modal-close-icon" width="8" height="8">
+                    <use href="./images/icons-form.svg#icon-close"></use>
+                  </svg>
+                </button>
+                <p class="modal-title">
+                  Leave your contacts and we will call you back
+                </p>
+                <form class="modal-form">
+                  <div class="modal-field">
+                    <label for="user-name" class="modal-label">Name</label>
+                    <div class="modal-input-wrap">
+                      <input
+                        id="user-name"
+                        name="user-name"
+                        type="text"
+                        class="modal-input"
+                      />
+                      <svg class="modal-icon" width="18" height="24">
+                        <use href="./images/icons-form.svg#icon-person"></use>
+                      </svg>
+                    </div>
+                  </div>
+                  <div class="modal-field">
+                    <label for="user-tel" class="modal-label">Phone</label>
+                    <div class="modal-input-wrap">
+                      <input
+                        id="user-tel"
+                        name="user-tel"
+                        type="tel"
+                        class="modal-input"
+                      />
+                      <svg class="modal-icon" width="18" height="24">
+                        <use href="./images/icons-form.svg#icon-phone"></use>
+                      </svg>
+                    </div>
+                  </div>
+                  <div class="modal-field">
+                    <label for="user-email" class="modal-label">Email</label>
+                    <div class="modal-input-wrap">
+                      <input
+                        id="user-email"
+                        name="user-email"
+                        type="email"
+                        class="modal-input"
+                      />
+                      <svg class="modal-icon" width="18" height="24">
+                        <use href="./images/icons-form.svg#icon-email"></use>
+                      </svg>
+                    </div>
+                  </div>
+                 <div class="modal-field">
+                    <label for="user-comment" class="modal-label"> Comment</label>
+                     <textarea
+                        name="user-comment"
+                        id="user-comment"
+                        class="modal-textarea"
+                        placeholder="Text input"
+                      ></textarea>
+                  </div>
+                  <div class="checkfield">
+                      <input
+                        id="user-privacy"
+                        type="checkbox"
+                        class="check-input visually-hidden"
+                      />
+                      <label for="user-privacy" class="input-check-text">
+                        <span class="check-empty">
+                          <svg class="check-icon" width="10" height="8">
+                            <use href="./images/icons-form.svg#icon-Vector"></use>
+                          </svg> </span
+                        >I accept the terms and conditions of the
+                        <a href="" class="input-check-link">Privacy Policy</a>
+                      </label>
+                    </div>
+                  </div>
+                </form>
+                <button class="modal-send-btn" type="submit">Send</button>
+              </div>
+            </div>
+         
   </body>
 </html>
