correct footer-form

--- a/index.html
+++ b/index.html
@@ -466,6 +466,7 @@
               <input
                 class="footer-form-input"
                 type="email"
+                name="email"
                 placeholder="E-mail"
               />
             </label>
