--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
     <!--Modal -->
     <div class="backdrop">
       <div class="modal">
-        <button class="modal-close-btn">
+        <button class="modal-close-btn" type="button">
           <svg class="modal-close-icon" width="8" height="8">
             <use href="./images/icons-form.svg#icon-close"></use>
           </svg>
@@ -533,7 +533,7 @@
               </svg>
             </div>
           </div>
-          <div class="modal-field">
+          <div class="modal-field-comment">
             <label for="user-comment" class="modal-label"> Comment</label>
             <textarea
               name="user-comment"
@@ -544,7 +544,9 @@
           </div>
           <div class="checkfield">
             <input
+              value="true"
               id="user-privacy"
+              name="user-privacy"
               type="checkbox"
               class="check-input visually-hidden"
             />
@@ -557,8 +559,8 @@
               <a href="" class="input-check-link">Privacy Policy</a>
             </label>
           </div>
+          <button class="modal-send-btn" type="submit">Send</button>
         </form>
-        <button class="modal-send-btn" type="submit">Send</button>
       </div>
     </div>
   </body>
