--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
       </section>
     </main>
     <footer class="footer-section">
-      <div class="container-footer">
+      <div class="container-footer container">
         <div class="footer-text-container">
           <a class="footer-logo-one" href="./index.html">
             Web
@@ -481,7 +481,7 @@
       </div>
     </footer>
 
-    <!--Modal -->
+    <!--Modal  -->
     <div class="backdrop">
       <div class="modal">
         <button class="modal-close-btn" type="button">
